syntax="proto3";

package order;

import "rpc/cart.proto";

option go_package = "/order";

service OrderService {
    rpc PlaceOrder(PlaceOrderReq) returns (PlaceOrderResp) {};
    rpc ListOrders(ListOrdersReq) returns (ListOrdersResp) {};
}

message Address {
    string street_address = 1;
    string city = 2;
    string state = 3;
    string country = 4;
    string zip_code = 5;
}

message OrderItem {
    cart.CartItem item = 1;
    float cost = 2;
}

message PlaceOrderReq {
    uint32 user_id = 1;

    Address address = 2;
    string email = 3;
    repeated OrderItem items = 4;
}

message OrderResult {
    string order_id = 1;
}

message PlaceOrderResp {
    OrderResult order = 1;
}

message ListOrdersReq {
    uint32 user_id = 1;
}

message Order {
    repeated OrderItem items = 1;
    string order_id = 2;
    uint32 user_id = 3;
    Address address = 4;
    string email = 5;
    int32 created_at = 6;
}

message ListOrdersResp {
    repeated Order orders = 1;
}